AM_CPPFLAGS = -Wall -I@top_srcdir@/include

bin_PROGRAMS = tv_grab_dvb_plus

tv_grab_dvb_plus_LDADD = ../libsi/libsi.a
tv_grab_dvb_plus_SOURCES = \
	chanid.cpp \
	dvbepg.cpp \
	dvbinfo.cpp \
	dvbtext.cpp \
	filter.cpp \
	freesathuffman.cpp \
	freesattables.cpp \
	loadepg.cpp \
	log.cpp \
	lookup.cpp \
	main.cpp \
	stats.cpp \
	\
	chanid.h \
	constants.h \
	dvbepg.h \
	dvbinfo.h \
	dvbtext.h \
	filter.h \
	formats.h \
	freesatepg.h \
	freesathuffman.h \
	freesattables.h \
	loadepg.h \
	log.h \
	lookup.h \
	sitables.h \
	stats.h
