AM_CPPFLAGS = -Wall -I@top_srcdir@/include -g

bin_PROGRAMS = tv_grab_dvb_plus

tv_grab_dvb_plus_LDADD = ../libsi/libsi.a
tv_grab_dvb_plus_SOURCES = \
	chanid.cpp \
	dvb_epg.cpp \
	dvb_info.cpp \
	dvb_text.cpp \
	dvb_parse.cpp \
	filter.cpp \
	freesat_huffman.cpp \
	freesat_tables.cpp \
	freesat_test.cpp \
	sky_epg.cpp \
	log.cpp \
	lookup.cpp \
	main.cpp \
	stats.cpp \
	\
	chanid.h \
	constants.h \
	dvb_epg.h \
	dvb_info.h \
	dvb_text.h \
	dvb_parse.h \
	filter.h \
	formats.h \
	freesat_epg.h \
	freesat_huffman.h \
	freesat_tables.h \
	freesat_test.h \
	sky_epg.h \
	log.h \
	lookup.h \
	sitables.h \
	stats.h
