AM_CPPFLAGS = -Wall -I@top_srcdir@/include -g -fpermissive

bin_PROGRAMS = tv_grab_dvb_plus

tv_grab_dvb_plus_LDADD = ../libsi/libsi.a
tv_grab_dvb_plus_SOURCES = \
	chanid.cpp \
	dvb_epg.cpp \
	dvb_info.cpp \
	dvb_text.cpp \
	dvb_parse.cpp \
	dvb_scan.cpp \
	parse-dvbscan.cpp \
	tuner.cpp \
	filter.cpp \
	freesat_huffman.cpp \
	freesat_tables.cpp \
	freesat_test.cpp \
	sky_epg.cpp \
	log.cpp \
	lookup.cpp \
	main.cpp \
	stats.cpp \
	\
	chanid.h \
	constants.h \
	dvb_epg.h \
	dvb_info.h \
	dvb_text.h \
	dvb_parse.h \
	dvb_scan.h \
	parse-dvbscan.h \
	tuner.h \
	filter.h \
	formats.h \
	freesat_epg.h \
	freesat_huffman.h \
	freesat_tables.h \
	freesat_test.h \
	sky_epg.h \
	log.h \
	lookup.h \
	sitables.h \
	list.h \
	extended_frontend.h \
	stats.h
